# aurum-lang

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  README.md
auc/: CMakeLists.txt  Doxyfile  main.cpp
auc/AST/: AST.cpp  AST.hpp  ASTElement.cpp  ASTElement.hpp  ASTMap.cpp  ASTMap.hpp  ASTPass.cpp  ASTPass.hpp  AbstractSyntaxTree.cpp  AbstractSyntaxTree.hpp  BlockExpressions.cpp  BlockExpressions.hpp  Blocks.cpp  Blocks.hpp  CodeLocation.cpp  CodeLocation.hpp  Declarations.cpp  Declarations.hpp  DeclarativeExpressions.cpp  DeclarativeExpressions.hpp  Errors.hpp  Expression.hpp  Expressions.cpp  Expressions.hpp  ImperativeExpressions.cpp  ImperativeExpressions.hpp  ScalarTypes.cpp  ScalarTypes.hpp  Statements.cpp  Statements.hpp  Type.cpp  Type.hpp  TypeExpr.cpp  TypeExpr.hpp  TypeStmt.cpp  TypeStmt.hpp  ValueExpressions.cpp  ValueExpressions.hpp  common.hpp
auc/Parser/: aurum.atg  unicode.txt
auc/Passes/: ASTPass.cpp  ASTPass.hpp  IRExportPass.cpp  IRExportPass.hpp  IdentifierPass.cpp  IdentifierPass.hpp  LLVMPass.cpp  LLVMPass.hpp  OutputPass.cpp  OutputPass.hpp  PrintPass.cpp  PrintPass.hpp  StdLibPass.cpp  StdLibPass.hpp  TypePass.cpp  TypePass.hpp  VerifyOptimizePass.cpp  VerifyOptimizePass.hpp
auc/Spec/: aurum.atg
auc/Types/: ScalarTypes.cpp  ScalarTypes.hpp  Type.cpp  Type.hpp
doxygen/: ASTElement_8cpp.html  ASTElement_8cpp__incl.map  ASTElement_8cpp__incl.md5  ASTElement_8cpp_source.html  ASTElement_8hpp.html  ASTElement_8hpp__dep__incl.map  ASTElement_8hpp__dep__incl.md5  ASTElement_8hpp__incl.map  ASTElement_8hpp__incl.md5  ASTElement_8hpp_source.html  ASTMap_8cpp.html  ASTMap_8cpp__incl.map  ASTMap_8cpp__incl.md5  ASTMap_8cpp_source.html  ASTMap_8hpp.html  ASTMap_8hpp__dep__incl.map  ASTMap_8hpp__dep__incl.md5  ASTMap_8hpp__incl.map  ASTMap_8hpp__incl.md5  ASTMap_8hpp_source.html  ASTPass_8cpp.html  ASTPass_8cpp__incl.map  ASTPass_8cpp__incl.md5  ASTPass_8cpp_source.html  ASTPass_8hpp.html  ASTPass_8hpp__dep__incl.map  ASTPass_8hpp__dep__incl.md5  ASTPass_8hpp__incl.map  ASTPass_8hpp__incl.md5  ASTPass_8hpp_source.html  AbstractSyntaxTree_8cpp.html  AbstractSyntaxTree_8cpp__incl.map  AbstractSyntaxTree_8cpp__incl.md5  AbstractSyntaxTree_8cpp_source.html  AbstractSyntaxTree_8hpp.html  AbstractSyntaxTree_8hpp__dep__incl.map  AbstractSyntaxTree_8hpp__dep__incl.md5  AbstractSyntaxTree_8hpp__incl.map  AbstractSyntaxTree_8hpp__incl.md5  AbstractSyntaxTree_8hpp_source.html  (+1091 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+61 more)
examples/: CMakeLists.txt
src/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt  ast_test.bc  ast_test.cpp  ast_test.out  ast_test.sh  test.sh
